Organized photos into folder

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="container">
                     <div class="navbar-header">
                         <a href="index.html" class="visible-sm visible-md visible-lg">
-                            <img src="Logo.png" id="logo-img">                  
+                            <img src="Photos/Logo.png" id="logo-img">                  
                         </a>
 
                         <div class="navbar-brand">
@@ -24,7 +24,7 @@
                                 <h1>Welcome to Paul's Recipe</h1>
                             </a>
                             <p>
-                                <img src="star-k-logo.png" id="sm-logo-img">
+                                <img src="Photos/star-k-logo.png" id="sm-logo-img">
                                 <span>They call me Korean Gordon Ramsey</span>
                             </p>
                         </div>
@@ -47,13 +47,13 @@
                 <div class="row">
                     <div class="col-12 col-lg-6 col-xl-6">
                         <div class="text-center">
-                            <img src="Headphotos/HeadPhoto.jpg" class="img-fluid" id="headphoto">
+                            <img src="Photos/Headphotos/HeadPhoto.jpg" class="img-fluid" id="headphoto">
                         </div>
                     </div>
 
                     <div class="col-12 col-xl-6 col-lg-6">
                         <div class="text-center">
-                            <img src="Headphotos/HeadPhoto3.jpg" class="img-fluid" id="headphoto">
+                            <img src="Photos/Headphotos/HeadPhoto3.jpg" class="img-fluid" id="headphoto">
                         </div>
                     </div>
                 </div>
@@ -68,7 +68,7 @@
                     
                     <div class="col-12 col-lg-4" >
                         <div class="card h-100">
-                            <img src="recipes/Foodphoto/kimchi.jpeg" class="card-img-top">
+                            <img src="Photos/Foodphoto/kimchi.jpeg" class="card-img-top">
                             <div class="card-body">
                                 <h2 class="text-center"><a href="recipes/kimchi.html"><button class="btn btn-primary">Kimchi Fried Rice</button></a></h2>
                                 <p class="card-text text-center">A fried rice dish originated from South Korea. A dish I grew up on and so very easy to make!</p>
@@ -79,7 +79,7 @@
                     </div>
                     <div class="col-12 col-lg-4">
                         <div class="card h-100">
-                            <img src="recipes/Foodphoto/Shrimp.jpg" class="cadd-img-top">
+                            <img src="Photos/Foodphoto/Shrimp.jpg" class="cadd-img-top">
                             <div class="card-body">
                                 <h2 class="text-center"> <a href="recipes/shrimptaco.html"><button class="btn btn-primary">Low Calorie Shrimp Taco</button></a></h2>
                                 <p class="text-center">Feeling hungry on your diet? This is one of my favorite meals where I don't feel like I'm cutting!</p>
@@ -89,7 +89,7 @@
                     </div>
                     <div class="col-12 col-lg-4">
                         <div class="card h-100">
-                            <img src="recipes/Foodphoto/Pizzaphoto.jpg" class="card-img-top">
+                            <img src="Photos/Foodphoto/Pizzaphoto.jpg" class="card-img-top">
                             <div class="card-body">
                                 <h2 class="text-center"> <a href="recipes/pizza.html"><button class="btn btn-primary">Pizza Pizza</button></a></h2>
                                 <p class="text-center">This ones for the cheat</p>
