--- a/recipes/kimchi.html
+++ b/recipes/kimchi.html
@@ -35,7 +35,7 @@
             <div class="row">
                 <div class="col-lg-4 col-12">
                     <div class="text-center">
-                        <img src="Foodphoto/kimchi.jpeg" class="foodphoto img-fluid rounded-3" >
+                        <img src="../Photos/Foodphoto/kimchi.jpeg" class="foodphoto img-fluid rounded-3" >
                     </div>
                 </div>
                 <div class="col-lg-8 col-12">
