Made photos responsive to mobile and removed cursive from Kimchi.html

--- a/recipes/kimchi.html
+++ b/recipes/kimchi.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
         <style>
             * {
-                font-family: Comic Sans MS, Comic Sans, cursive;
+                font-family: Comic Sans MS, Comic Sans;
                 font-size: larger  ;
             }
             .foodphoto {
