Updated all recipe pages

--- a/recipes/shrimptaco.html
+++ b/recipes/shrimptaco.html
@@ -53,12 +53,12 @@
 
         <div class="container">
             <div class="row" id="title">
-                <h1>Kimchi Fried Rice</h1>
+                <h1>Shrimp Taco</h1>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-12">
                     <div class="text-center">
-                        <img src="../Photos/Foodphoto/kimchi.jpeg" class="foodphoto img-fluid rounded-3" >
+                        <img src="../Photos/Foodphoto/Shrimp.jpg" class="foodphoto img-fluid rounded-3" >
                     </div>
                 </div>
                 <div class="col-lg-8 col-12">
@@ -66,12 +66,13 @@
                     <h3>What you'll need</h3>
                     <p>
                         <ul id="list">
-                            <li>Day old rice</li>
-                            <li>Kimchi</li>
-                            <li>Pork Belly</li>
-                            <li>Soy Sauce</li>
-                            <li>Salt & Pepper</li>
-                            <li>Gochujang(고추장)</li>
+                            <li>Extra Jumbo Shrimp</li>
+                            <li>Onion</li>
+                            <li>Bean Sprouts</li>
+                            <li>Zero Carb Taco Tortilla</li>
+                            <li>Salt, Pepper, Paprika</li>
+                            <li>Choice of Hot Sauce</li>
+                            <li>Cauliflower Rice</li>
                         </ul>
 
                     </p>
@@ -83,11 +84,11 @@
                     <div class="col-lg-10">
                         <p>
                             <ol id="steps">
-                                <li>Heat up the pan with some cooking oil.</li>
-                                <li>Fry your pork belly of meat of choice. No need for extra oil!</li>
-                                <li>After your meat is seared, throw in your kimchi (8oz), gochujang (1tbsp), and soy sauce(1tbsp)</li>
-                                <li>Grill until the mixture thickens.</li>
-                                <li>Throw in your rice! I like to throw in sesame oil to add layers to the flavor and an egg on top. Enjoy!</li>
+                                <li>Slice and grill onions</li>
+                                <li>Peel and season the shrimp and throw it in with the onion</li>
+                                <li>After the shrimp pinkens, throw in your bean sprouts</li>
+                                <li>Throw in green onions and sesame oil for extra taste</li>
+                                <li>Eat it with cauliflower rice and zero carb tortilla for a calorie conscious way to get full</li>
                             </ol>
                         </p>
                     </div>
