--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Paul's Recipes</title>
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/style.css">
         <meta charset="utf-8">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -15,12 +15,12 @@
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container">
                     <div class="navbar-brand">
-                        <a href="index.html"  >
-                            <img src="Photos/Logo.png" id="logo-img" class="d-none d-lg-block">                  
+                        <a href="/"  >
+                            <img src="Photos/songlogo.png" id="logo-img" class="d-none d-lg-block">                  
                         </a>
                     
         
-                        <a href="index.html">
+                        <a href="/">
                             <h1 id="titleheader">Welcome to Paul's Recipe</h1>
                         </a>
                         <p>
@@ -36,7 +36,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav mr-auto" id="menuitem">
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html"><span class="fa fa-home"><br class=".d-none .d-sm-block">Home</span></a>
+                        <a class="nav-link" href="/"><span class="fa fa-home"><br class=".d-none .d-sm-block">Home</span></a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="https://www.linkedin.com/in/paul-song-/" target="_blank"><span class="fa fa-briefcase"><br class=".d-none .d-sm-block">Connect</Span></a>
