--- a/recipes/shrimptaco.html
+++ b/recipes/shrimptaco.html
@@ -7,7 +7,7 @@
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../css/recipe.css">
-        <link rel="stylesheet" href="../css/styles.css">
+        <link rel="stylesheet" href="../css/style.css">
     </head>
 
     <body>
@@ -15,12 +15,12 @@
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container">
                     <div class="navbar-brand">
-                        <a href="../index.html"  >
-                            <img src="../Photos/Logo.png" id="logo-img" class="d-none d-lg-block">                  
+                        <a href="/"  >
+                            <img src="../Photos/songlogo.png" id="logo-img" class="d-none d-lg-block">                  
                         </a>
                     
         
-                        <a href="../index.html">
+                        <a href="/">
                             <h1 id="titleheader">Welcome to Paul's Recipe</h1>
                         </a>
                         <p>
@@ -36,7 +36,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav mr-auto" id="menuitem">
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html"><span class="fa fa-home"><br class=".d-none .d-sm-block">Home</span></a>
+                        <a class="nav-link" href="/"><span class="fa fa-home"><br class=".d-none .d-sm-block">Home</span></a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="https://www.linkedin.com/in/paul-song-/" target="_blank"><span class="fa fa-briefcase"><br class=".d-none .d-sm-block">Connect</Span></a>
