Found small typo

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="container">
                 <div class="row">
                     <div class="text-center col-12">
-                        <h2 title="firsth2">Just a little me enjoying some food and drinks</h2>
+                        <h2>Just a little me enjoying some food and drinks</h2>
                     </div>
                 </div>
                 <div class="row">
